refactor, fix: исправлена ошибка отправки джобы + рефакторинг